--- a/u8.qmd
+++ b/u8.qmd
@@ -83,7 +83,7 @@ As you view this video, jot down the principles in your reflection journal for f
 
 ::: {.learning-activity time=""}
 
-Read Fenwick, T. (2010). [Workplace ‘Learning’ and Adult Education: Messy Objects, blurry maps and making difference.](assets/unit8/Fenwick_2010.pdf){target="_blank"} *European Journal for Research on the Education and Learning of Adults.* *I,* 79-95.
+Read Fenwick, T. (2010). [Workplace ‘Learning’ and Adult Education: Messy Objects, blurry maps and making difference.](assets/u8/Fenwick_2010.pdf){target="_blank"} *European Journal for Research on the Education and Learning of Adults.* *I,* 79-95.
 
 As you read this article, focus on the eight categories of workplace learning beginning on page 81 and only read the rest of the article if you are interested. Consider how these categories connect with the adult learning principles you looked at in your website analysis assignment.
 
