--- a/u9.qmd
+++ b/u9.qmd
@@ -108,6 +108,10 @@ Realizing that our core values, personality traits and characteristics impact to
 
 These values direct my entire teaching methodology; I espouse the goals of differentiated instruction (basically changing instructional methods to adapt to different learners) and aim to create a space for learning that empowers all students to succeed. (See [here](https://study.com/academy/lesson/what-is-differentiated-instruction-examples-definition-activities.html){target="_blank"} for more information). Differentiated instruction is a seamless part of my instructional planning and practice and I intentionally create opportunities to learn about students’ strengths, needs, interests, preferences and ways of learning. [Here](http://www.educationplanner.org/students/self-assessments/learning-styles-quiz.shtml){target="_blank"} is an example of a self-assessment tool to help identify a learner’s learning style. To this end I use meaningful [engaging tasks](https://www.prolaera.com/7-effective-way-to-engage-adult-learners/){target="_blank"}, [flexible grouping](https://www.kpu.ca/sites/default/files/Teaching%20and%20Learning/TD.1.3_Bedford%26Wiebe%26Tschida_Flexible_Grouping.pdf){target="_blank"}, and ongoing [assessment and adjustment](https://lincs.ed.gov/state-resources/federal-initiatives/teal/guide/formativeassessment){target="_blank"}. I differentiate the content, process, or product components of the educational experience by using a range of strategies and methods, e.g., anchor activities, tiered lessons, small-group instruction, and varied tasks.
 
+::: {.prote}
+[flexible grouping](https://www.kpu.ca/sites/default/files/Teaching%20and%20Learning/TD.1.3_Bedford%26Wiebe%26Tschida_Flexible_Grouping.pdf) link expired
+:::
+
 I’ve used my own practice as a Christian educator as an example to give you some ideas and direction. Please take the time to explore the resources linked in the notes and other resources in your Brookfield and Silberman texts. The approach taken throughout this course is an intellectually humble one. In chapters five and six Brookfield (2013) particularly addresses the power dynamic in the classroom, awareness of which may foster a more intellectually humble approach. You are encouraged to use your texts as primary resources for more detailed information about specific strategies and approaches to making a contribution as an adult educator while remaining intellectually humble.
 
 ### Activity: Reading
@@ -116,8 +120,11 @@ I’ve used my own practice as a Christian educator as an example to give you so
 
 **Read this article:** Leary, Mark & J. Diebels, Kate & K. Davisson, Erin & P. Jongman-Sereno, Katrina & Isherwood, Jennifer & Raimi, Kaitlin & Deffler, Samantha & Hoyle, Rick. (2017). Cognitive and Interpersonal Features of Intellectual Humility. *Personality and Social Psychology Bulletin. 43*. 014616721769769. 10.1177/0146167217697695.
 
-The above [article](https://journals-sagepub-com.ezproxy.student.twu.ca/doi/pdf/10.1177/0146167217697695?){target="_blank"} can be accessed through the TWU
-library:
+The above [article](https://journals-sagepub-com.ezproxy.student.twu.ca/doi/pdf/10.1177/0146167217697695?){target="_blank"} can be accessed through the TWU library:
+
+::: {.note}
+[article](https://journals-sagepub-com.ezproxy.student.twu.ca/doi/pdf/10.1177/0146167217697695?) link expired
+:::
 
 As you read this article, self-evaluate your level of openness, curiosity, tolerance of ambiguity and dogmaticism.
 
