--- a/u5.qmd
+++ b/u5.qmd
@@ -36,6 +36,10 @@ Here is a checklist of learning activities you will benefit from in completing t
 
 :::
 
+::: {.prote}
+- Review the ["Principles of Appreciative Inquiry"](https://appreciativeinquiry.champlain.edu/learn/appreciative-inquiry-introduction/5-classic-principles-ai){target="_blank"} link expired
+:::
+
 ::: {.note}
 
 **Assessment**
@@ -99,6 +103,10 @@ Review the ["Principles of Appreciative Inquiry"](https://appreciativeinquiry.ch
 - Select two of the Principles of Appreciative Inquiry. In a 250-word discussion post, describe a learning activity you would conduct with your class that integrates both of these principles. For example, how would you design a writing assignment that included "Positive Principle"?
 - **Or**, describe an assignment through which you ask students to create a short video that incorporates the "Poetic Principle."
 
+:::
+
+::: {.prote}
+["Principles of Appreciative Inquiry"](https://appreciativeinquiry.champlain.edu/learn/appreciative-inquiry-introduction/5-classic-principles-ai){target="_blank"} link expired
 :::
 
 ## Supporting Connections Between Learners
