--- a/u9.qmd
+++ b/u9.qmd
@@ -11,7 +11,7 @@ Unit 9 focuses on three guiding questions:
 - What strategies foster intellectual humility in ourselves and in our learning environment?
 
 
-## Topics {.unnumbered}
+### Topics {.unnumbered}
 
 This unit is divided into the following topics:
 
@@ -32,6 +32,7 @@ When you have completed this unit, you will be able to:
 Here is a list of learning activities that will benefit you in completing this unit. You may find it useful for planning your work.
 
 ::: {.learning-activity}
+
 - Read Chapter 6 of *Braving the Wilderness* (Brown, 2017) and follow the prompts for reflection and application.
 - Watch "Intrigue: How to Create Interest and Connect with Anyone" by Sam Horn and create your own intriguing pitch following his suggested process.
 - Read "Cognitive and Interpersonal Features of Intellectual Humility" (Leary et al., 2017) and respond to the question in your Reflective Journal.
