Unit 8 figure fix

--- a/u1.qmd
+++ b/u1.qmd
@@ -166,7 +166,7 @@ But how is this done?
 
 In "To Know as We Are Known," Palmer (1993) suggests that learning spaces must include openness, boundaries, and an air of hospitality. These learning spaces, according to Palmer (1993) can be spaces "both to be and to become" (p. 71).
 
-### Activity: Strategies for Creating an Authentic Learning Environment {.unnumbered}
+### Activity: Strategies for Creating an Authentic Learning Environment
 
 ::: {.learning-activity time="60"}
 
