--- a/u4.qmd
+++ b/u4.qmd
@@ -233,7 +233,7 @@ Community of Transformational Learning
 *Source:* Adapted from *TWU Community of Transformational Learning* (Madland, 2017). Licensed under [CC BY 4.0](https://creativecommons.org/licenses/by/4.0/){target="_blank"}.
 :::
 
-### Activity: Trinity Community of Inquiry {.unnumbered}
+### Activity: Trinity Community of Inquiry
 
 ::: {.learning-activity time="45"}
 Review the [Transformational Learning at TWU](https://ma-lead.github.io/ldrs664/assets/unit4/Madland-transformational-learning.pdf){target="_blank"} (Madland, 2017).
