--- a/u9.qmd
+++ b/u9.qmd
@@ -86,7 +86,7 @@ Our hope and vision must be rooted in the present. If that present is fraught wi
 Courage with heart is needed to face the challenges of handling challenging situations when we ourselves might not feel equipped. Courage with heart tempered by intellectual humility is needed to transform lives through education. Effective adult educators are people with a vision for good, with confidence that they can influence positive change and help facilitate transformation in their learners because they are continually working on their own self-knowledge and will research the strategies and methods as well as the content that will be most helpful for their learners to be successful.
 
 
-### Activity: Hold Hands with Strangers {.unnumbered}
+### Activity: Hold Hands with Strangers
 
 ::: {.learning-activity time="60"}
 
@@ -102,7 +102,7 @@ Read Chapter 6, "Hold Hands. With Strangers." in *Braving the Wilderness: The Qu
 
 :::
 
-### Activity: Intrigue - How to Create Interest and Connect with Anyone {.unnumbered}
+### Activity: Intrigue - How to Create Interest and Connect with Anyone
 
 ::: {.learning-activity time="45"}
 
